<resources>

    <string name="app_name">The Beast</string>

    <string name="agreement">\n\nJust this:\n\nWe collect\n_anonymous_\nuser information\n\nto make this game\nan \neven better\n experience...</string>
    <string name="in">I accept</string>
    <string name="out">Get me out of here...</string>

    <string name="dialog_not_online">Offline attempts are recorded,\noffline successes not...</string>
    <string name="ok">OK</string>

    <string name="facebook_app_id">2172139316370662</string>
    <string name="easy">\"easy\"</string>
    <string name="harder">harder</string>
    <string name="difficult">difficult</string>
    <string name="real_deal">the real deal</string>
    <string name="cube_beast">The Cube Beast</string>
    <string name="tutorial">Tutorial</string>
    <string name="game">The Game</string>
    <string name="feedback">Feedback</string>
    <string name="credits">Credits</string>

</resources>
