<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Sander Theetaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:background="#000"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cube_beast"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:text="@string/cube_beast"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"></View>

    <TextView
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/easy"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:text="@string/easy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0F0" />

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"></View>

    <!--TextView
        android:id="@+id/multiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/multi_player"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:text="@string/multi_player"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0F0" />

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"></View-->

    <TextView
        android:id="@+id/harder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/harder"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:text="@string/harder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0F0" />

    <View
        android:layout_width="1dp"
        android:layout_height="30dp"></View>

    <!--TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0F0" />

    <View
        android:layout_width="1dp"
        android:layout_height="30dp"></View-->

    <TextView
        android:id="@+id/difficult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/difficult"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:text="@string/difficult"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0F0" />


    <View
        android:layout_width="1dp"
        android:layout_height="30dp"></View>

    <TextView
        android:id="@+id/real_deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/real_deal"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:text="@string/real_deal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0F0" />

</LinearLayout>
